实现 主页 从数据库获取数据

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -8,7 +8,7 @@
                     <li><a href="/">Blog</a> <span class="divider"></span></li>
                     <li class="active"></li>
                     </ul>
-                     {% module Template("posts.html", pager=pager, posts=posts) %}                                        
+                     {% module Template("posts.html", pager=pager, posts=posts, psers=psers, ptids=ptids, ptags=ptags) %}                                       
                 </div>
 
                   {% include "_side.html" %} 
