--- a/app/views/_base.html
+++ b/app/views/_base.html
@@ -6,6 +6,8 @@
         <title>Blog</title>
         <link rel="stylesheet" type="" href="/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/base.css">
+        {% block head_css %}{% end %}
+        {% block head_js %}{% end %}
     </head>
     <body>
         <header>
@@ -28,6 +30,7 @@
                 <li><a href="#about">C/C++</a></li>
                 <li><a href="#about">Python</a></li>
                 <li><a href="#about">Linux</a></li>
+                
                
                 <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
@@ -72,11 +75,34 @@
 
         <footer class="footer">
         <div class="container">
-            {% block footer %}{% end %}
+            {% if handler.get_runtime_conf('qrimg') %}
+            <img class="qrcode pull-right" src="{{ handler.get_runtime_conf('qrimg') }}">
+            {% end %}
+
+            {% block power %}
+            <p>{% raw handler.get_runtime_conf('power') %}</p>
+            {% end %}
+
+            {% block built %}
+            <p>{% raw handler.get_runtime_conf('built') %}</p>
+            {% end %}
+
+            {% block links %}
+                {% if handler.get_runtime_conf('links') %}
+                <ul class="footer-links">
+                    {% for link in handler.jsons(handler.get_runtime_conf('links')) %}
+                    {% if 'text' in link and link['text'] and 'href' in link and link['href'] %}
+                    <li><a href="{{ link['href'] }}" target="_blank">{{ link['text'] }}</a></li>
+                    {% end %}
+                    {% end %}
+                </ul>
+                {% end %}
+            {% end %}
         </div>
         </footer>
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdn.bootcss.com/holder/2.9.4/holder.min.js"></script>
+    {% block foot_js %}{% end %}
     </body>
 </html>
